--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 	  	font-size: 9px;
 	  	font-style: bold;
 	  	font-family:'Roboto', sans-serif;
-	  	  }
+	  }
 
 	  .new {
 	  	text-decoration: underline;
@@ -23,3 +23,8 @@
 	  	color: white;
 
 	  }
+
+	 h2.big.scary {
+	 	font-size: 10px;
+	 	color: blue;
+	 }
